; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/engine/extr_eng_devcrypto.c_devcrypto_ciphers.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/engine/extr_eng_devcrypto.c_devcrypto_ciphers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32**, i32**, i32)* @devcrypto_ciphers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devcrypto_ciphers(i32* %0, i32** %1, i32** %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32**, i32*** %7, align 8
  %11 = icmp eq i32** %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %4
  %13 = load i32**, i32*** %8, align 8
  %14 = call i32 @get_cipher_nids(i32** %13)
  store i32 %14, i32* %5, align 4
  br label %23

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = call i32* @get_cipher_method(i32 %16)
  %18 = load i32**, i32*** %7, align 8
  store i32* %17, i32** %18, align 8
  %19 = load i32**, i32*** %7, align 8
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  %22 = zext i1 %21 to i32
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %15, %12
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @get_cipher_nids(i32**) #1

declare dso_local i32* @get_cipher_method(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
